# compiler-admin

./: .env.sample  .gitignore  .pre-commit-config.yaml  404.html  LICENSE  README.md  compose.yaml  data.json  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt  sitemap.xml
.config/: README.md
.devcontainer/: Dockerfile  devcontainer.json  postAttach.sh
.github/workflows/: biweekly-time-reporting.yml  mkdocs.yml  monthly-time-reporting.yml  pytest.yml  time-reporting.yml
assets/: styles.css
compiler_admin/: __init__.py  main.py
compiler_admin/api/: toggl.py
compiler_admin/commands/: __init__.py  convert.py  create.py  delete.py  info.py  init.py  offboard.py  reset_password.py  restore.py  signout.py
compiler_admin/commands/ls/: __init__.py  clients.py  groups.py  orgs.py  project_users.py  projects.py  users.py
compiler_admin/commands/time/: __init__.py  convert.py  (+3 more)
compiler_admin/commands_click/: init.py  main.py
compiler_admin/services/: files.py  google.py  harvest.py  time.py  toggl.py
docs/: .pages  index.md  requirements.txt
docs/explanation/: architecture.md  concepts.md
docs/guides/: ls.md
docs/reference/: .pages  configuration.md
docs/tutorials/: getting-started.md  monthly-time-reporting.md  offboarding-a-user.md  onboarding-a-user.md
explanation/architecture/: index.html
explanation/concepts/: index.html
guides/ls/: index.html
htmlcov/: class_index.html  d_0a5874315817f647___init___py.html  d_0a5874315817f647_main_py.html  d_47b87d1d87eae1fb_google_py.html  d_af4e77d9aa386392___init___py.html  d_af4e77d9aa386392_convert_py.html  d_af4e77d9aa386392_create_py.html  d_af4e77d9aa386392_delete_py.html  d_af4e77d9aa386392_info_py.html  d_af4e77d9aa386392_init_py.html  d_af4e77d9aa386392_offboard_py.html  d_af4e77d9aa386392_reset_password_py.html  d_af4e77d9aa386392_restore_py.html  d_af4e77d9aa386392_signout_py.html  d_e19a473f18cc02a2___init___py.html  d_e19a473f18cc02a2_convert_py.html  d_e19a473f18cc02a2_create_py.html  d_e19a473f18cc02a2_delete_py.html  d_e19a473f18cc02a2_offboard_py.html  d_e19a473f18cc02a2_reset_password_py.html  d_e19a473f18cc02a2_restore_py.html  d_e19a473f18cc02a2_signout_py.html  function_index.html  index.html  status.json  z_0a5874315817f647___init___py.html  z_0a5874315817f647_main_py.html  z_2e877eb52613fb16___init___py.html  z_2e877eb52613fb16_convert_py.html  z_2e877eb52613fb16_download_py.html  z_2e877eb52613fb16_lock_py.html  z_2e877eb52613fb16_verify_py.html  z_47b87d1d87eae1fb_files_py.html  z_47b87d1d87eae1fb_google_py.html  z_47b87d1d87eae1fb_harvest_py.html  z_47b87d1d87eae1fb_time_py.html  z_47b87d1d87eae1fb_toggl_py.html  z_af4e77d9aa386392_info_py.html  z_af4e77d9aa386392_init_py.html  z_b68deed0629282a6___init___py.html  (+18 more)
notebooks/: download-and-convert.ipynb  harvest-to-toggl.ipynb  summarize-harvest.ipynb  toggl-to-harvest.ipynb  toggl-to-justworks.ipynb  verify-harvest.ipynb
notebooks/data/: harvest-sample.csv  justworks-sample.csv  toggl-project-info-sample.json  toggl-sample.csv  toggl-user-info-sample.json
reference/configuration/: index.html
reference/coverage/: class_index.html  function_index.html  index.html  status.json  z_0a5874315817f647___init___py.html  z_0a5874315817f647_main_py.html  z_2e877eb52613fb16___init___py.html  z_2e877eb52613fb16_convert_py.html  z_2e877eb52613fb16_download_py.html  z_2e877eb52613fb16_lock_py.html  z_2e877eb52613fb16_verify_py.html  z_47b87d1d87eae1fb___init___py.html  z_47b87d1d87eae1fb_files_py.html  z_47b87d1d87eae1fb_google_py.html  z_47b87d1d87eae1fb_harvest_py.html  z_47b87d1d87eae1fb_time_py.html  z_47b87d1d87eae1fb_toggl_py.html  z_af4e77d9aa386392___init___py.html  z_af4e77d9aa386392_info_py.html  z_af4e77d9aa386392_init_py.html  z_b68deed0629282a6___init___py.html  z_b68deed0629282a6_groups_py.html  z_b68deed0629282a6_orgs_py.html  z_b68deed0629282a6_users_py.html  z_d72a1b420acf9aa6_toggl_py.html  z_e19a473f18cc02a2___init___py.html  z_e19a473f18cc02a2_backupcodes_py.html  z_e19a473f18cc02a2_convert_py.html  z_e19a473f18cc02a2_create_py.html  z_e19a473f18cc02a2_deactivate_py.html  z_e19a473f18cc02a2_delete_py.html  z_e19a473f18cc02a2_offboard_py.html  z_e19a473f18cc02a2_reactivate_py.html  z_e19a473f18cc02a2_reset_py.html  z_e19a473f18cc02a2_restore_py.html  z_e19a473f18cc02a2_signout_py.html
search/: search_index.json
tests/: conftest.py  run.sh  test_main.py
tests/api/: test_toggl.py
tests/commands/: test_convert.py  test_create.py  test_delete.py  test_info.py  test_init.py  test_offboard.py  test_reset_password.py  test_restore.py  test_signout.py
tests/commands_click/: test_info.py  test_init.py
tests/services/: test_files.py  test_google.py  test_harvest.py  test_time.py  test_toggl.py
tutorials/getting-started/: index.html
tutorials/monthly-time-reporting/: index.html
tutorials/offboarding-a-user/: index.html
tutorials/onboarding-a-user/: index.html
(+103 files in other folders)
