[project]
name = "compiler-admin"
dynamic = ["version"]
description = "Administrative tasks for Compiler's internal systems."
readme = "README.md"
license = { file = "LICENSE" }
classifiers = ["Programming Language :: Python :: 3 :: Only"]
keywords = ["gam", "google"]
authors = [
    { name = "Compiler LLC", email = "dev@compiler.la" }
]
requires-python = ">=3.11"
dependencies = [
    "advanced-gam-for-google-workspace @ git+https://github.com/taers232c/GAMADV-XTD3.git@v6.61.14#subdirectory=src"
]

[project.urls]
code = "https://github.com/compilerla/admin"
tracker = "https://github.com/compilerla/admin/issues"

[project.optional-dependencies]
dev = [
    "black",
    "build",
    "flake8",
    "pre-commit",
    "setuptools_scm>=8"
]
test = [
    "coverage",
    "pytest",
    "pytest-mock"
]

[project.scripts]
compiler-admin = "compiler_admin.main:main"

[build-system]
requires = ["setuptools>=65", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 127
target-version = ['py311']
include = '\.pyi?$'

[tool.coverage.run]
branch = true
relative_files = true
source = ["compiler_admin"]

[tool.pyright]
include = ["compiler_admin", "tests"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "e2e: marks tests that need a live config",
]
norecursedirs = [
    "*.egg-info",
    ".git",
    ".pytest_cache",
    ".vscode",
]

[tool.setuptools_scm]
# intentionally left blank, but we need the section header to activate the tool
