[project]
name = "compiler-admin"
dynamic = ["version"]
description = "Administrative tasks for Compiler's internal systems."
readme = "README.md"
license = { file = "LICENSE" }
classifiers = ["Programming Language :: Python :: 3 :: Only"]
keywords = ["gam", "google"]
authors = [
    { name = "Compiler LLC", email = "dev@compiler.la" }
]
requires-python = ">=3.11"
dependencies = [
    "click==8.2.1",
    "gam7==7.29.4",
    "pandas==2.3.3",
    "tzdata",
]

[project.urls]
code = "https://github.com/compilerla/compiler-admin"
tracker = "https://github.com/compilerla/compiler-admin/issues"

[project.optional-dependencies]
dev = [
    "black",
    "build",
    "flake8",
    "ipykernel",
    "pre-commit",
    "setuptools_scm>=8"
]
test = [
    "coverage",
    "pytest",
    "pytest-mock",
    "pytest-socket"
]

[project.scripts]
compiler-admin = "compiler_admin.main:main"

[build-system]
requires = ["setuptools>=65", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 127
target-version = ['py311']
include = '\.pyi?$'

[tool.coverage.run]
branch = true
relative_files = true
source = ["compiler_admin"]

[tool.pyright]
include = ["compiler_admin", "tests"]
typeCheckingMode = "off"

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "e2e: marks tests that need a live config",
]
norecursedirs = [
    "*.egg-info",
    ".git",
    ".pytest_cache",
    ".vscode",
]

[tool.setuptools]
packages = ["compiler_admin"]

[tool.setuptools_scm]
# intentionally left blank, but we need the section header to activate the tool
